# FastAPI-gmail_api

./: README.md  pyproject.toml
App/: config.py  main.py  send.py
App/gmail_api/: Google.py  credentials.json  token.json
