[tool.poetry]
name = "mail_server"
version = "0.1.0"
description = ""
authors = ["Allen Xie <zuzu60410@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
google-api-python-client = "^2.17.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.5"
email-to = "^0.1.0"
pybase64 = "^1.2.0"
pickle5 = "^0.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
